--- a/setup.cfg
+++ b/setup.cfg
@@ -19,7 +19,7 @@ classifiers =
 [options]
 packages = find:
 install_requires =
-    mutalyzer @ git+https://github.com/mutalyzer/mutalyzer.git@master#egg=mutalyzer
+    mutalyzer==3.0.0.a1
     flask-restx==0.5.1
     Flask-Cors==3.0.10
 tests_require =
