--- a/setup.cfg
+++ b/setup.cfg
@@ -19,7 +19,8 @@ classifiers =
 [options]
 packages = find:
 install_requires =
-    mutalyzer==3.0.0.a1
+    mutalyzer>=3.0.0.a1
+;    mutalyzer @ git+https://github.com/mutalyzer/mutalyzer.git@master#egg=mutalyzer
     flask-restx==0.5.1
     Flask-Cors==3.0.10
 tests_require =
@@ -27,7 +28,7 @@ tests_require =
 
 [options.entry_points]
 console_scripts =
-    mutalyzer-api = mutalyzer_api.api:main
+    mutalyzer_api = mutalyzer_api.api:main
 
 [flake8]
 ignore = E203, E266, E501, W503, F403, F401
