--- a/setup.cfg
+++ b/setup.cfg
@@ -19,11 +19,11 @@ classifiers =
 [options]
 packages = find:
 install_requires =
-    mutalyzer==3.0.5
-    flask-restx==1.0.5
-    Flask-Cors==3.0.10
+    mutalyzer>=3.0.7
+    flask-restx>=1.3.0
+    Flask-Cors>=4.0.0
 tests_require =
-   pytest==6.2.2
+   pytest
 
 [options.entry_points]
 console_scripts =
